feat(STB3-287): implement filter for temporal validity
