# app/lori/server/src/main/kotlin/de/zbw/api/lori/server/route/ItemRoutes.kt
@@ -5,6 +5,7 @@ import de.zbw.business.lori.server.AccessStateFilter
 import de.zbw.business.lori.server.LoriServerBackend
 import de.zbw.business.lori.server.PublicationDateFilter
 import de.zbw.business.lori.server.PublicationTypeFilter
+import de.zbw.business.lori.server.TemporalValidityFilter
 import de.zbw.lori.model.ItemCountByRight
 import de.zbw.lori.model.ItemEntry
 import de.zbw.lori.model.ItemInformation
@@ -308,6 +309,9 @@ fun Routing.itemRoutes(
                         QueryParameterParser.parsePublicationTypeFilter(call.request.queryParameters["filterPublicationType"])
                     val accessStateFilter: AccessStateFilter? =
                         QueryParameterParser.parseAccessStateFilter(call.request.queryParameters["filterAccessState"])
+                    val temporalValidityFilter: TemporalValidityFilter? =
+                        QueryParameterParser.parseTemporalValidity(call.request.queryParameters["filterTemporalValidity"])
+
                     span.setAttribute("searchTerm", searchTerm ?: "")
                     span.setAttribute("limit", limit.toString())
                     span.setAttribute("offset", offset.toString())
@@ -344,7 +348,7 @@ fun Routing.itemRoutes(
                         return@withContext
                     }
                     val metadataFilters = listOfNotNull(publicationDateFilter, publicationTypeFilter)
-                    val rightFilters = listOfNotNull(accessStateFilter)
+                    val rightFilters = listOfNotNull(accessStateFilter, temporalValidityFilter)
                     if (searchTerm == null || searchTerm.isBlank()) {
                         val items = backend.getItemList(limit, offset, metadataFilters, rightFilters)
                         val entries = backend.countMetadataEntries(metadataFilters, rightFilters)
